# opensource-best-practice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup_test.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: auto-label.yml  release-drafter.yml  release.yml  remove-triage.yml
my_package/docs/source/: conf.py  index.rst
