[project]
name = "opensource-best-practice"
version = "0.1.5"
description = ""
authors = [
    {name = "Hamza Kabbaj",email = "hamza.kabbaj@live.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-semantic-release (>=9.21.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["my_package/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_release = true  
upload_to_pypi = false