[project]
name = "opensource-best-practice"
version = "0.1.12"
description = ""
authors = [
    {name = "Hamza Kabbaj",email = "hamza.kabbaj@live.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-semantic-release (>=9.21.0,<10.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.1.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinxcontrib-napoleon (>=0.7,<0.8)",
    "myst-parser (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_release = true  
upload_to_pypi = false